--- a/pendidikan.html
+++ b/pendidikan.html
@@ -68,10 +68,10 @@
                 </div>
                 <div class="bawah">
                     <div class="isi-1">
-                        <iframe src="https://www.youtube.com/embed/OyYQPpPmMv4"></iframe>
+                        <iframe src="https://www.youtube.com/embed/XhlEb7LcxbE"></iframe>
                     </div>
                     <div class="isi-1">
-                        <iframe src="https://www.youtube.com/embed/wHbH4D-Pq7Y"></iframe>
+                        <iframe src="https://www.youtube.com/embed/hFdFCA_VfNw"></iframe>
                     </div>
                 </div>
                 <div class="artikel-1">
